css fix overflow

--- a/ipl-draft/src/styles.scss
+++ b/ipl-draft/src/styles.scss
@@ -5,6 +5,8 @@
 
 body {
     font-family: 'Roboto';
-    margin: 0px
+    margin: 0px;
+    white-space: nowrap;
+    overflow-x: hidden;
   }
   
